objects/Schedules__c.object
<CustomObject>
    <fields>
        <fullName>Media_General_Units_Group_2_Daypart_A__c</fullName>
        <formula>(Units_Aired__c+ Bonus_Bundle_Units__c) *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media General Units Group 2 Daypart A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_General_Units_Group_2_Daypart_B__c</fullName>
        <formula>(Units_Aired__c+ Bonus_Bundle_Units__c) *2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media General Units Group 2 Daypart B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_General_Units__c</fullName>
        <formula>(Units_Aired__c + Bonus_Bundle_Units__c) *5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media General Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MilitaryTime__c</fullName>
        <formula>CASE ( TEXT ( Start_Time__c ) ,
&quot;06:00A&quot;,0,
&quot;06:30A&quot;,1,
&quot;07:00A&quot;,2,
&quot;07:30A&quot;,3,
&quot;08:00A&quot;,4,
&quot;08:30A&quot;,5,
&quot;09:00A&quot;,6,
&quot;09:30A&quot;,7,
&quot;10:00A&quot;,8,
&quot;10:30A&quot;,9,
&quot;11:00A&quot;,10,
&quot;11:30A&quot;,11,
&quot;12:00P&quot;,12,
&quot;12:30P&quot;,13,
&quot;01:00P&quot;,14,
&quot;01:30P&quot;,15,
&quot;02:00P&quot;,16,
&quot;02:30P&quot;,17,
&quot;03:00P&quot;,18,
&quot;03:30P&quot;,19,
&quot;04:00P&quot;,20,
&quot;04:30P&quot;,21,
&quot;05:00P&quot;,22,
&quot;05:30P&quot;,23,
&quot;06:00P&quot;,24,
&quot;06:30P&quot;,25,
&quot;07:00P&quot;,26,
&quot;07:30P&quot;,27,
&quot;08:00P&quot;,28,
&quot;08:30P&quot;,29,
&quot;09:00P&quot;,30,
&quot;09:30P&quot;,31,
&quot;10:00P&quot;,32,
&quot;10:30P&quot;,33,
&quot;11:00P&quot;,34,
&quot;11:30P&quot;,35,
&quot;12:00A&quot;,36,
&quot;12:30A&quot;,37,
&quot;01:00A&quot;,38,
&quot;01:30A&quot;,39,
&quot;02:00A&quot;,40,
&quot;02:30A&quot;,41,
&quot;03:00A&quot;,42,
&quot;03:30A&quot;,43,
&quot;04:00A&quot;,44,
&quot;04:30A&quot;,45,
&quot;05:00A&quot;,46,
47)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Military_End_Time__c</fullName>
        <formula>if( right(text( End_Time__c ),1)=&quot;P&quot;, 

text(value(left(text(End_Time__c),2))+12)&amp;MID(text(End_Time__c),3,3), 

(left(text(End_Time__c),2))&amp;MID(text(End_Time__c),3,3) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Start_Time__c</fullName>
        <formula>if( right(text(Start_Time__c),1)=&quot;P&quot;, 

text(value(left(text(Start_Time__c),2))+12)&amp;MID(text(Start_Time__c),3,3), 

(left(text(Start_Time__c),2))&amp;MID(text(Start_Time__c),3,3) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Long_Form_Traffic_Current__c</fullName>
        <formula>And( ISPICKVAL(Deal_Parent__r.Program__r.Cable_Synd__c, &quot;PP&quot;),DealBrand__c &lt;&gt; &quot;Availability&quot;,Units_Aired__c &gt;0, 

OR(ISBLANK( LF_traffic__c ),ISBLANK( X800_Number__c )), 

LF_Week__c = Deal_Parent__r.Program__r.Week_Pending__c, 

Reconciled__c =&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Dep]Missing Long Form Traffic Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Long_Form_Traffic__c</fullName>
        <formula>And( ISPICKVAL(Deal_Parent__r.Program__r.Cable_Synd__c, &quot;PP&quot;),DealBrand__c &lt;&gt; &quot;Availability&quot;,Units_Aired__c &gt;0, 

OR(ISBLANK( LF_traffic__c ),ISBLANK( X800_Number__c )), 

LF_Week__c = Deal_Parent__r.Program__r.Week_Pending__c + 7, 

Reconciled__c =&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Dep]Missing Long Form Traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Traffic_Current_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;Reportid=00OC0000005VWnC?pv0=&quot; + Deal_Parent__r.Contact__r.Id + &quot;~pv1=&quot; + DealProgram__c + 
&quot;&amp;CETId=a4BC0000000Kyyt&quot; + 
&quot;&amp;EmailToId=&quot; + Deal_Parent__r.Contact__r.Id + 
&quot;&amp;EmailAdditionalTo=&quot;+ Deal_Parent__r.Contact__r.Traffic_Contact__r.Email + 
&quot;&amp;EmailCC=&quot; + Deal_Parent__r.Contact__r.Traffic_CC__c + 
&quot;&amp;EmailFromId=0D2C0000000L06L&quot; + 
&quot;&amp;EmailBCC=dianehyden@mvmediasales.com,jillianbenanti@mvmediasales.com&quot; + 
&quot;&amp;QMode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Traffic Current URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Traffic_Current_Week__c</fullName>
        <formula>And(  ISPICKVAL(Deal_Parent__r.Program__r.Cable_Synd__c, &quot;Syndication&quot;), DealBrand__c  &lt;&gt; &quot;Availability&quot;,Units_Aired__c &gt;0,

OR(ISBLANK( ISCI_CODE__c ),ISBLANK( X800_Number__c )),   

Week__c = Deal_Parent__r.Program__r.Week_Pending__c,

Reconciled__c =&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Dep]Missing Traffic - Current Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Traffic__c</fullName>
        <formula>And(  ISPICKVAL(Deal_Parent__r.Program__r.Cable_Synd__c, &quot;Syndication&quot;), DealBrand__c  &lt;&gt; &quot;Availability&quot;,Units_Aired__c &gt;0,

OR(ISBLANK( ISCI_CODE__c ),ISBLANK( X800_Number__c )),   

Week__c = Deal_Parent__r.Program__r.Week_Pending__c + 7,

Reconciled__c =&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Dep]Missing Traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( (LF_Week__c) +6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NFL_Daypart__c</fullName>
        <label>[Dep]NFL Daypart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EM M-F 6A-9A</fullName>
                </value>
                <value>
                    <fullName>Early Morning ROS S/S 6A-9A</fullName>
                </value>
                <value>
                    <fullName>Weekday Day ROS M-Fr 9A-4P</fullName>
                </value>
                <value>
                    <fullName>Weekend Day ROS S/S 9A-4P</fullName>
                </value>
                <value>
                    <fullName>Fringe ROS M-Su 4P-7P</fullName>
                </value>
                <value>
                    <fullName>Prime ROS M-Su 7P-12M</fullName>
                </value>
                <value>
                    <fullName>Latenight ROS M-Sun 12M-3A</fullName>
                </value>
                <value>
                    <fullName>Overnight ROS M-Su 3A-6A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negative_Preemption_Check__c</fullName>
        <formula>if( Units_Preempted__c &lt;0,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative Preemption Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>if(Deal_Parent__r.ContactAccount__c = &quot;BathWraps&quot;,Total_Dollars__c,Total_Dollars__c * 17/20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Gross Dollars minus agency commission.</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Deal_Number__c</fullName>
        <formula>Deal_Parent__r.Network_Deal_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Deal Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Networks__c</fullName>
        <description>Select a Network to dynamically filter the list of relevant cable dayparts.</description>
        <inlineHelpText>Select a Network to dynamically filter the list of relevant cable dayparts.</inlineHelpText>
        <label>Networks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Justice Network</fullName>
                </value>
                <value>
                    <fullName>CBS Sports</fullName>
                </value>
                <value>
                    <fullName>MAV TV</fullName>
                </value>
                <value>
                    <fullName>Antenna TV</fullName>
                </value>
                <value>
                    <fullName>This TV</fullName>
                </value>
                <value>
                    <fullName>Bounce</fullName>
                </value>
                <value>
                    <fullName>TENNIS</fullName>
                </value>
                <value>
                    <fullName>MLB</fullName>
                </value>
                <value>
                    <fullName>MGM HD</fullName>
                </value>
                <value>
                    <fullName>GritTV</fullName>
                </value>
                <value>
                    <fullName>EscapeTV</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>FamilyNet</fullName>
                </value>
                <value>
                    <fullName>COOL</fullName>
                </value>
                <value>
                    <fullName>NFLN</fullName>
                </value>
                <value>
                    <fullName>JLTV</fullName>
                </value>
                <value>
                    <fullName>SiTV</fullName>
                </value>
                <value>
                    <fullName>OUTSIDE</fullName>
                </value>
                <value>
                    <fullName>Univision Select</fullName>
                </value>
                <value>
                    <fullName>Telefutura Select</fullName>
                </value>
                <value>
                    <fullName>Youtoo</fullName>
                </value>
                <value>
                    <fullName>Test Network</fullName>
                </value>
                <value>
                    <fullName>Cozi</fullName>
                </value>
                <value>
                    <fullName>BuzzrTV</fullName>
                </value>
                <value>
                    <fullName>FidoTV</fullName>
                </value>
                <value>
                    <fullName>Laff</fullName>
                </value>
                <value>
                    <fullName>Tribune Sports</fullName>
                </value>
                <value>
                    <fullName>NHL Network</fullName>
                </value>
                <value>
                    <fullName>NHL Network - Local</fullName>
                </value>
                <value>
                    <fullName>TVG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Filler__c</fullName>
        <formula>IF( 

TEXT(MGM_HD_Daypart__c) = &quot;ROS-&quot;,True,

IF(
AND(DealBrand__c &lt;&gt; &quot;Availability&quot;,DealBrand__c &lt;&gt; &quot;Availability - 1&quot;),X30_Rate__c  &lt; Filler_Rate__c,False)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Filler checks based on program&apos;s floor rates on the program object.</inlineHelpText>
        <label>New Filler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Week_in_Quarter__c</fullName>
        <label>New Week in Quarter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderLineNumber__c</fullName>
        <label>Order Line Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>OrderNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overran_Units_V2__c</fullName>
        <formula>if((Units_Available__c-Prelog_Count_Version_2__c)&lt;0,Units_Available__c-Prelog_Count_Version_2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overran Units V2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overran_Units_V3__c</fullName>
        <formula>IF((Units_Available__c - Prelog_Count_Version_3__c)&gt;0,0,Units_Available__c - Prelog_Count_Version_3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overran Units V3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overran_Units_v1__c</fullName>
        <formula>if((Units_Available__c-Prelog_Count_Version_1__c)&lt;0,Units_Available__c-Prelog_Count_Version_1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overran Units V1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PI_Payout_TEST__c</fullName>
        <description>Roll up of payout amount from the PI Payout Child object</description>
        <label>PI Payout TEST</label>
        <summarizedField>PI_Payout__c.Payout_Amount__c</summarizedField>
        <summaryForeignKey>PI_Payout__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PI_Payout__c</fullName>
        <description>Enter the total dollar value of the PI payout for this brand/program combination</description>
        <label>PI Payout</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PI_Performance_Follow_Up_URL__c</fullName>
        <description>Send an email to Tania for underperforming PIs by Agency.</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;Reportid=00OC0000005VEMp?pv0=&quot; + DealAccount__c +
&quot;&amp;CETId=a4BC0000000KyyZ&quot; +
&quot;&amp;EmailToId=003C000001ZEd3y&quot; +
&quot;&amp;EmailAdditionalTo=taniabonetti@mvmediasales.com,adrianlo@mvmediasales.com&quot; +
&quot;&amp;QMode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI Performance Follow Up URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <description>Carries through the PI variable from the Deal Parent for use with Custom List Views</description>
        <formula>if(Deal_Parent__r.PI__c, &quot;x&quot;, &quot;&quot;)</formula>
        <label>PI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Revision_Comment__c</fullName>
        <description>Jake Test... 10.26.2011. Change Logs</description>
        <label>PP Revision Comment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADDED</fullName>
                </value>
                <value>
                    <fullName>RATE CHANGE</fullName>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                </value>
                <value>
                    <fullName>PRE-EMPTED</fullName>
                </value>
                <value>
                    <fullName>CREDIT</fullName>
                </value>
                <value>
                    <fullName>PARTIAL CREDIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PP_Revision__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Jake Change Log Test 10.26.2011</description>
        <label>PP Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Dollars__c</fullName>
        <formula>Performance__c * Total_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <label>Performance %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phantom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phantom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pod__c</fullName>
        <description>For Syndication Post Logs</description>
        <inlineHelpText>For Syndication Post Logs</inlineHelpText>
        <label>Pod</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreLog_Booked_Dollars__c</fullName>
        <label>PreLog Booked Dollars</label>
        <summarizedField>PrelogData__c.Rate__c</summarizedField>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prelog_1_Clearance__c</fullName>
        <formula>if(Deal_Parent__r.Program__r.Prelog_Version__c =1,(Prelog_Count_Version_1__c / Units_Available__c),if(Deal_Parent__r.Program__r.Prelog_Version__c =2,(Prelog_Count__c / Units_Available__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog Clearance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prelog_30s_Preempted__c</fullName>
        <formula>WO_30_Units__c -  (Prelog_Count_Dynamic__c * VALUE(TEXT(Deal_Parent__r.Length__c))/30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog 30s Preempted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelog_Booked_Dollars_New__c</fullName>
        <formula>PreLog_Booked_Dollars__c +  Archived_Prelog_Booked_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog Booked Dollars New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prelog_Clearance__c</fullName>
        <formula>Prelog_Count__c  / Units_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog Clearance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prelog_Count_Dynamic__c</fullName>
        <formula>CASE(Deal_Parent__r.Program__r.Prelog_Version__c, 1,(Prelog_Count_Version_1__c), 2, (Prelog_Count_Version_2__c),3, (Prelog_Count_Version_3__c),4,(Prelog_Count_Version_4__c),5,(Prelog_Count_Version_5__c),6, (Prelog_Count_Version_6__c), 00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog Count Dynamic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelog_Count_New__c</fullName>
        <formula>Prelog_Count__c +  Archived_Prelog_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog Count New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelog_Count_Version_1__c</fullName>
        <label>Prelog Count Version 1</label>
        <summaryFilterItems>
            <field>PrelogData__c.Version__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prelog_Count_Version_2__c</fullName>
        <label>Prelog Count Version 2</label>
        <summaryFilterItems>
            <field>PrelogData__c.Version__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prelog_Count_Version_3__c</fullName>
        <label>Prelog Count Version 3</label>
        <summaryFilterItems>
            <field>PrelogData__c.Version__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prelog_Count__c</fullName>
        <description>Counts up all prelog records.  This field is used for reporting on schedules that have zero prelog records, also used in Contact Batch.</description>
        <label>Prelog Count</label>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prelog_Dollars_Dynamic__c</fullName>
        <formula>CASE(Deal_Parent__r.Program__r.Prelog_Version__c, 1,(Prelog_Dollars_Version_1__c), 2, (Prelog_Dollars_Version_2__c),3, (Prelog_Dollars_Version_3__c),4,(Prelog_Dollars_Version_4__c),5,(Prelog_Dollars_Version_5__c),6, (Prelog_Dollars_Version_6__c), 00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prelog Dollars Dynamic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prelog_Dollars_Version_1__c</fullName>
        <description>Used to calculate the Prelog Dollars by Version #. Implemented in Prelog Dollars Dynamic, which is used in the Prelog Update Check button.</description>
        <label>Prelog Dollars Version 1</label>
        <summarizedField>PrelogData__c.Rate__c</summarizedField>
        <summaryFilterItems>
            <field>PrelogData__c.Version__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prelog_Dollars_Version_2__c</fullName>
        <description>Used to calculate the Prelog Dollars by Version #. Implemented in Prelog Dollars Dynamic, which is used in the Prelog Update Check button.</description>
        <label>Prelog Dollars Version 2</label>
        <summarizedField>PrelogData__c.Rate__c</summarizedField>
        <summaryFilterItems>
            <field>PrelogData__c.Version__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prelog_Dollars_Version_3__c</fullName>
        <description>Used to calculate the Prelog Dollars by Version #. Implemented in Prelog Dollars Dynamic, which is used in the Prelog Update Check button.</description>
        <label>Prelog Dollars Version 3</label>
        <summarizedField>PrelogData__c.Rate__c</summarizedField>
        <summaryFilterItems>
            <field>PrelogData__c.Version__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>PrelogData__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Previous_Incumbent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Schedule of Previous Months incumbent.</inlineHelpText>
        <label>[Dep]Previous Incumbent</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Units_Available__c</fullName>
        <label>[Dep]Previous Units Available</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Week__c</fullName>
        <formula>DealProgram__c &amp; &quot;    &quot;  &amp;Text(Month(Week__c)) &amp; &quot;/&quot; &amp; Text(Day(Week__c)) &amp; &quot;/&quot; &amp; Text(Year(Week__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Change__c</fullName>
        <description>Notes whether a schedule was created prior to quarter start.  
DOES NOT CALCULATE PROPERLY FOR LONG FORM</description>
        <formula>If( 
 ISPICKVAL(Deal_Parent__r.Program__r.Cable_Synd__c, &quot;PP&quot;),  &quot;&quot;, 


IF (datevalue(CreatedDate) &lt; (Week__c - (Week_in_Quarter__c-1)*7), &quot;Y&quot;, &quot;N&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If(DATE(CreatedDate) &lt; (Week__c - (Week_in_Quarter__c-1)*7), &quot;Y&quot;, &quot;N&quot;)</inlineHelpText>
        <label>Quarter Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Sets the quarter that the schedule falls into</description>
        <formula>IF( Month__c  &lt; 4, 1,  IF( ((Month__c &gt;3) &amp;&amp;  (Month__c  &lt; 7)), 2,  IF( ((Month__c &gt;6)  &amp;&amp;  (Month__c &lt;10)),3,  IF(( Month__c &gt;9), 4, 0) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Rating Estimate</label>
        <referenceTo>Rating_Estimates__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Rating</label>
        <referenceTo>Rating_Header__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raycom_Dollars__c</fullName>
        <formula>Total_Dollars__c /2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raycom Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Raycom_Make_Good__c</fullName>
        <description>Checks to see how much $$ needed to make up the bundles.</description>
        <formula>Total_Dollars__c - Spot_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Make Good</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Raycom_Rate__c</fullName>
        <formula>Rate__c /10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raycom Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Raycom_Units_Daypart_B__c</fullName>
        <formula>(Units_Aired__c+ Bonus_Bundle_Units__c ) *2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raycom Units - Daypart B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raycom_Units_Daypart_C__c</fullName>
        <formula>(Units_Aired__c+ Bonus_Bundle_Units__c) *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raycom Units - Daypart C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raycom_Units__c</fullName>
        <formula>(Units_Aired__c + Bonus_Bundle_Units__c) *10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raycom Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Week_in_Quarter__c</fullName>
        <description>Week in Quarter: uses trigger</description>
        <label>Real Week in Quarter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reconciled__c</fullName>
        <formula>if( LF_Week__c &lt;= Deal_Parent__r.Program__r.Reconciled_Week__c , &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reconciled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Missing_Traffic_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;Reportid=00OC0000005VLkW?pv0=&quot; +  Deal_Parent__r.Contact__r.Id  + &quot;~pv1=&quot; + DealProgram__c +
&quot;&amp;CETId=a4BC0000000Kyyt&quot; +
&quot;&amp;EmailToId=&quot; + Deal_Parent__r.Contact__r.Id +
&quot;&amp;EmailAdditionalTo=&quot;+ Deal_Parent__r.Contact__r.Traffic_Contact__r.Email +
&quot;&amp;EmailCC=&quot; +  Deal_Parent__r.Contact__r.Traffic_CC__c +
&quot;&amp;EmailFromId=0D2C0000000L06L&quot; +
&quot;&amp;EmailBCC=adrianlo@mvmediasales.com,dianehyden@mvmediasales.com,jillianbenanti@mvmediasales.com,theolopez@mvmediasales.com&quot; +
&quot;&amp;QMode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Missing Traffic URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retro_Raycom_Units__c</fullName>
        <formula>(Units_Aired__c + Bonus_Bundle_Units__c) *7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retro Raycom Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewed_for_Invoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Reviewed for Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rotation__c</fullName>
        <label>[Dep]Rotation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>50-50 Split</fullName>
                </value>
                <value>
                    <fullName>Pattern</fullName>
                </value>
                <value>
                    <fullName>Limited Ratio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Number_if_Billed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]SI Number if Billed</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SS10_Titles_Value__c</fullName>
        <formula>TEXT( SS10_Titles__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Dep]SS10 Titles Value</label>
        <type>Text</type>
    </fields>
</CustomObject>